Fix metrics alignment

--- a/src/app/data-visualization-bar/data-visualization-bar.component.scss
+++ b/src/app/data-visualization-bar/data-visualization-bar.component.scss
@@ -4,7 +4,7 @@ div {
   &.container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: stretch;
   }
 }
 
@@ -12,8 +12,9 @@ mat-card {
   min-width: 300px;
 
   &.small {
+    flex-grow: 1;
     min-width: 200px;
-    width: 29%;
+    width: 300px;
   }
 }
 
